// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Render multiple nav items 1`] = `
.c0 {
  padding-left: 16px;
  border-left: 1px solid #00000020;
}

.c2 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.29em;
  margin-bottom: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out;
  transition: background-color,0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out;
  outline: none;
  margin: 8px 0;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c1:hover {
  background-color: #EBE7FF;
}

.c3 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out;
  transition: background-color,0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out;
  outline: none;
  margin: 8px 0;
  background-color: #EBE7FF;
}

.c3:not(:disabled) {
  cursor: pointer;
}

.c3:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c3:hover {
  background-color: #EBE7FF;
}

<div>
  <ul
    class="c0"
    data-testid="pbl-sidebarnav"
  >
    <li
      class="c1"
      data-testid="pbl-sidebarnav-item"
    >
      <span
        class="c2"
      >
        Hello
      </span>
    </li>
    <li
      class="c3"
      data-testid="pbl-sidebarnav-item"
    >
      <span
        class="c2"
      >
        World
      </span>
    </li>
    <li
      class="c1"
      data-testid="pbl-sidebarnav-item"
    >
      <span
        class="c2"
      >
        Bye
      </span>
    </li>
  </ul>
</div>
`;

exports[`Render one nav item 1`] = `
.c0 {
  padding-left: 16px;
  border-left: 1px solid #00000020;
}

.c2 {
  font-family: "IBM Plex Sans",sans-serif;
  font-style: normal;
  font-weight: normal;
  margin: 0;
  font-size: 0.875rem;
  line-height: 1.29em;
  margin-bottom: 0;
}

.c1 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: 1px solid transparent;
  background: transparent;
  border-radius: 4px;
  -webkit-transition: background-color,0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out;
  transition: background-color,0.3s,border-color 0.3s,box-shadow 0.3s ease-in-out;
  outline: none;
  margin: 8px 0;
  background-color: #EBE7FF;
}

.c1:not(:disabled) {
  cursor: pointer;
}

.c1:disabled {
  opacity: 0.4;
  cursor: normal;
}

.c1:hover {
  background-color: #EBE7FF;
}

<div>
  <ul
    class="c0"
    data-testid="pbl-sidebarnav"
  >
    <li
      class="c1"
      data-testid="pbl-sidebarnav-item"
    >
      <span
        class="c2"
      >
        Hello
      </span>
    </li>
  </ul>
</div>
`;
